Removing horizontal scroll and fixing responsive header

--- a/clean.css
+++ b/clean.css
@@ -22,6 +22,8 @@ html {
 
 body {
     margin: 0;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 /**
